--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 ---
-layout: default:
+layout: default
 title: ERROR418 | HOME
 ---
-
-<!DOCTYPE html>
-<html>
-<body>
-	<h1> Test Page, Please Ignore</h1>
-	<p> Test post, please ignore</p>
-</body>
-</html>
+<div class="blurb">
+	<h1>Test page, please ignore.</h1>
+	<p>Please ignore harder...</p>
+</div>
