--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
----
-layout: default
-title: ERROR418 | HOME
----
-<div class="blurb">
-	<h1>Test page, please ignore.</h1>
-	<p>Please ignore harder...</p>
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>ERROR418 | HOME</title>
+	<link href="/css/main.css" type="text/css" rel="stylesheet">
+</head>
+
+<header>
+	<nav>
+	<ul>
+        	<li><a href="/">Home</a></li>
+        	<li><a href="/tools/tools.html">Bees</a></li>
+        	<li><a href="scripting/scripting.html">Scripting</a></li>
+	        <li><a href="services/services.html">Services</a></li>
+		<li><a href="/links/links.html">Links</a></li>
+	</ul>
+	</nav>
+</header>
+
+<body>
+
+	<h1>What're you buyin'?</h1>
+
+</body>
+
+<footer>
+	<p>Not the bees!</p>
+</footer>
+
+</html>
