--- a/tools/tools.html
+++ b/tools/tools.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: BEES
+---
 
-<head>
-        <title>ERROR418 | Bees</title>
-        <link href="/css/main.css" type="text/css" rel="stylesheet">
-</head>
-
-<header>
-        <nav>
-        <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/tools/tools.html">Bees</a></li>
-                <li><a href="/scripting/scripting.html">Scripting</a></li>
-                <li><a href="/services/services.html">Services</a></li>
-                <li><a href="/links/links.html">Links</a></li>
-        </ul>
-        </nav>
-</header>
-
-<body>
         <h1>Web Shells</h1>
         <ul>
                 <p class="uline">CFM</p>
@@ -48,11 +32,4 @@
                         <br>
                         <br>
 
-</body>
-
-<footer>
-        <p>Not the bees!</p>
-</footer>
-
-</html>
 
