--- a/index.html
+++ b/index.html
@@ -1,8 +1,2 @@
----
-layout: default
-title: ERROR418 | HOME
----
-<div class="blurb">
-	<h1>Test page, please ignore.</h1>
-	<p>Please ignore harder...</p>
-</div>
+
+	<h1>What're you buyin'?</h1>
