Fixed some spacing

--- a/tools/tools.html
+++ b/tools/tools.html
@@ -6,13 +6,13 @@ title: BEES
         <h1>Web Shells</h1>
         <ul>
                 <p class="uline">CFM</p>
-                <li><a href="shells/shell.cfm">shell.cfm</a></li>
+                <li style="line-height:.1em;"><a href="shells/shell.cfm">shell.cfm</a></li>
                         <br>
                 <p class="uline">JSP</p>
-                <li><a href="shells/shell.jsp">shell.jsp</a></li>
+                <li style="line-height:.1em;"><a href="shells/shell.jsp">shell.jsp</a></li>
                         <br>
                 <p class="uline">PHP</p>
-                <li><a href="shells/shell.php">shell.php</a></li>
+                <li style="line-height:.1em;"><a href="shells/shell.php">shell.php</a></li>
         </ul>
                         <br>
                         <br>
