--- a/404.html
+++ b/404.html
@@ -1,8 +1,32 @@
----
-layout: default
-title: 404
-----
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ERROR418 | 404</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+<body> 
+<header>
+        <nav>
+        <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/tools/tools.html">Bees</a></li>
+                <li><a href="/scripting/scripting.html">Scripting</a></li>
+                <li><a href="/services/services.html">Services</a></li>
+                <li><a href="/links/links.html">Links</a></li>
+        </ul>
+        </nav>
+</header>
 
-<p>I'm sorry you had to see this</p>
-<br>
-<p>Let's just go our separate ways and pretend this never happend...</p>
+    <div class="container">
+    
+      <p>I'm sorry you had to see this</p>
+      <br>
+      <p>Let's just go our separate ways and pretend this never happend...</p>
+    
+    </div><!-- End container -->
+
+<footer>
+  <p>Not the bees!</p>
+</footer>
+</body>
+</html>
